完成append和prepend系列API的注释和单测；补充toMap系列方法；